# NFTer

./: .gitignore  LICENSE  README.md  app.py  main (copy).py  main.py  pyproject.toml  requirements.txt  setup.py
attached_assets/: Pasted--Replace-your-role-list-add-weights-and-improve-prompts-sed-i-def-generate-image-selected-1747583788193.txt  Pasted-sed-i-roles-selected-random-choice-c-roles-n-label-civilian-villager--1747584355754.txt
backend/: pyproject.toml  pytest.ini
backend/src/nfter/: app.py  config.py
backend/tests/: test_app.py
docs/adr/: 0001-nft-contract-design.md  0002-kiosk-integration.md  0003-nft-minting-implementation.md  nft-contract-design.md
docs/move/: conventions.md  gaming-nft-concepts.md  ownership_model.md  strings.md
docs/nft-steps/: 01-get-gas.md  02-publish.md  03-init-collection.md  04-add-policy.md  05-setting-royalties.md  Transferpolicy.txt  dynamic-field.txt  find_nft_ids.sh  get_royalties.sh  royalty.txt  setup_sui_nft.sh  transferpolicy.txt
docs/prd/: nft-minting.md
docs/sui-client/: cli.md
docs/todo/: nft-implementation.md
frontend/: vite.config.ts
frontend/src/components/: Layout.tsx  RoyaltyConfig.tsx
legacy/attached_assets/: Pasted--1-Add-detailed-roles-dictionary-prompt-logic-sed-i-def-generate-image-a-roles-n-1747581225316.txt
legacy/backend/: README.md
legacy/frontend/: package-lock.json  package.json
move/: Move.toml
move/sources/: nfter.move  royalty_rule.move
nfter-next/: next.config.js  package-lock.json  package.json
static/css/: style.css
static/js/: script.js
templates/: index.html
(+25 files in other folders)
